--- a/mystyle.css
+++ b/mystyle.css
@@ -3,5 +3,12 @@
 }
 
 #map {
-    height: 100%;
+    height: 600px;
+    transition: height 1s;
+}
+
+@media (min-width: 800px) {
+    #map {
+        height:400px;
+    }
 }
