Changed error in margin for all pages

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,9 @@
 /* application overall */
 @media (min-width: 1000px) {
     .container-fluid     {
-        margin-right: 170px;
-        margin-left: 170px;
+        margin: 20px;
+        margin-right: 60px;
+        margin-left: 60px;
     }
 }
 
