--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,8 @@
 /* application overall */
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
     .container-fluid     {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-right: 60px;
-        margin-left: 60px;
+        width: 90%;
+        margin-top: 5%;
     }
 }
 
