--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@
 @media (min-width: 1200px) {
     .container-fluid     {
         width: 90%;
-        margin-top: 5%;
+        margin-top: 20px;
     }
 }
 
