--- a/mysass.scss
+++ b/mysass.scss
@@ -1,5 +1,5 @@
-$navbar-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 15%, rgba(0,212,255,1) 100%);
+$navbar-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,166,255,1) 50%, rgba(0,212,255,1) 100%);
 
 .navbar {
-    background-color: $navbar-color;
+    background: $navbar-color;
 }
