Fixed error by compiling scss file

--- a/mysass.css
+++ b/mysass.css
@@ -1,4 +1,4 @@
 .navbar {
-  background-color: linear-gradient(90deg, #020024 0%, #090979 15%, #00d4ff 100%); }
+  background: linear-gradient(to right, #6f5ac8, #6362d2, #536adb, #3d72e3, #127aeb); }
 
 /*# sourceMappingURL=mysass.css.map */
