Changed color for navbar

--- a/mysass.scss
+++ b/mysass.scss
@@ -1,4 +1,4 @@
-$navbar-gradient: linear-gradient(to right, #6f5ac8, #6362d2, #536adb, #3d72e3, #127aeb);
+$navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, #127aeb);
 
 .navbar {
     background: $navbar-gradient;
