--- a/mystyle.css
+++ b/mystyle.css
@@ -6,12 +6,13 @@ body {
 @media (min-width: 1200px) {
     .container-fluid     {
         width: 85%;
-        margin-top: 40px;
     }
 }
-.page-header {
-    padding-bottom: 15px;
+.page-head {
+    padding: 15px;
+    text-align: center;
 }
+
 
 /* about.html */
 #about-container {
@@ -25,18 +26,11 @@ body {
 }
 
 /* traveled.html */
+.travel-row {
+    height: auto;
+}
 #map {
-    transition: height 1s;
-}
-@media (min-width: 800px) {
-    #map {
-        height: 600px;
-    }
-}
-@media (max-width: 799px) {
-    #map {
-        height: 400px;
-    }
+    height: 100%;
 }
 .table {
     background-color: floralwhite;
