--- a/mysass.scss
+++ b/mysass.scss
@@ -5,6 +5,7 @@ $navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, 
 
 .col-md-6 {
     font-family: 'Nanum Brush Script', cursive;
+    font-size: 2rem;
 
     #name {
         font-size: 4rem;
