--- a/mystyle.css
+++ b/mystyle.css
@@ -19,12 +19,12 @@ body {
     }
 }
 .col-md-6 {
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 /* about.html */
 #about-container {
-    margin-top: 30px;
+    margin-top: 2rem;
     height: 80%;
 }
 #about-img {
