Added content to README

--- a/mysass.scss
+++ b/mysass.scss
@@ -23,7 +23,7 @@ $navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, 
     }
 }
 
-$portfolio-gradient: linear-gradient(to bottom right, #1aade9, #1712eb);
+$portfolio-gradient: linear-gradient(to bottom right, #1869e3, #0b041e);
 $completed-gradient: linear-gradient(to bottom right, #56D0FD, #56FD7D);
 $future-gradient: linear-gradient(to bottom right, #FDBD56, #FD56B6);
 .card {
