--- a/mysass.scss
+++ b/mysass.scss
@@ -25,6 +25,7 @@ $navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, 
     border-radius: 10px;
     padding: 30px;
     border: 0;
+    background-color: transparent;
     .card-title, .card-text {
         font-family: 'Dosis', sans-serif;
         color: white;
