Tweaking with height of slides images

--- a/mysass.scss
+++ b/mysass.scss
@@ -49,3 +49,7 @@ $future-gradient: linear-gradient(to bottom right, #FDBD56, #FD56B6);
 #slide-row {
     height: 400px;
 }
+.slide-img {
+    height: 400px;
+    width: auto;
+}
