--- a/mysass.css
+++ b/mysass.css
@@ -5,7 +5,8 @@
   font-family: 'Nanum Brush Script', cursive;
   font-size: 1.5rem; }
   .col-md-6 #name {
-    font-size: 4rem; }
+    font-size: 4rem;
+    margin-bottom: 2rem; }
   .col-md-6 #quote {
     font-style: italic;
     color: gray; }
