--- a/mysass.scss
+++ b/mysass.scss
@@ -8,6 +8,7 @@ $navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, 
     font-size: 1.5rem;
     #name {
         font-size: 4rem;
+        margin-bottom: 2rem;
     }
     #quote {
         font-style: italic;
