--- a/mysass.scss
+++ b/mysass.scss
@@ -32,7 +32,7 @@ $navbar-gradient: linear-gradient(to right, #23c4da, #00b5e4, #00a4ed, #0091f0, 
         color: white;
     }
 }
-$portfolio-gradient: linear-gradient(to bottom right, #e261f5, #5b2ea4);
+$portfolio-gradient: linear-gradient(to bottom right, #83d6f2, #051937);
 .portfolio-card {
     @extend .card;
     background: $portfolio-gradient;
