--- a/mystyle.css
+++ b/mystyle.css
@@ -40,6 +40,10 @@ body {
 #about-img {
     width: 100%;
 }
+/* portfolio.html */
+.carousel-inner > .item > img {
+     margin:auto;
+}
 
 /* traveled.html */
 #map {
