Compiled scss file

--- a/mysass.css
+++ b/mysass.css
@@ -26,7 +26,7 @@
     color: white; }
 
 .portfolio-card {
-  background: linear-gradient(to bottom right, #e261f5, #5b2ea4); }
+  background: linear-gradient(to bottom right, #83d6f2, #051937); }
 
 .complete-card {
   background: linear-gradient(to bottom right, #56D0FD, #56FD7D); }
